@@ -40,6 +40,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
   redirects to the redirect table
 * Add links to page and file deletion forms to edit predefined delete reasons 
 * (bug 13269) Added MediaWiki:Uploadfooter to the bottom of Special:Upload
+* (bug 2815) Search results for media files now use thumb instead of text extract
 
 === Bug fixes in 1.13 ===
 
